@@ -1,4 +1,9 @@
 
+2018-04-13  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* codegen.c (process_command_line): minimal size for -tlines=20
+	  to prevent endless loops on typos like -tlines=2
+
 2018-04-12  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* codegen.c (output_internal_function): prevent SIGSEGV for
